# otterplaces

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Cargo.toml  README.md  app.config.ts  app.json  package-lock.json  package.json  rust-toolchain.toml
.github/: CODEOWNERS  flowcrafter.yml  labels.yml  settings.yml
.github/workflows/: markdown.yml  typescript.yml  yaml.yml
app/: index.tsx
crates/shared/: Cargo.toml  uniffi.toml
crates/shared_types/: .gitignore  Cargo.toml  build.rs
crates/shared_types/src/: lib.rs
docs/: README.md
ios/: Podfile  project.yml
ios/OtterPlaces/: Info.plist
ios/OtterPlaces.xcodeproj/: project.pbxproj
ios/OtterPlaces.xcodeproj/xcshareddata/xcschemes/: OtterPlaces.xcscheme
ios/OtterPlaces.xcworkspace/: contents.xcworkspacedata
ios/SimpleCounter/: core.swift
ios/SimpleCounter.xcodeproj/: project.pbxproj
lib/: supabase.ts
shared/: Cargo.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcuserdata/jdn.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: lib.rs
shared_types/: .gitignore  Cargo.toml  build.rs
shared_types/src/: lib.rs
supabase/: config.toml
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/uniffi-bindgen.xcodeproj/: project.pbxproj
uniffi-bindgen/uniffi-bindgen.xcodeproj/xcuserdata/jdn.xcuserdatad/xcschemes/: xcschememanagement.plist
