[package]
name = "shared"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = [
    "lib", # Used when linking into a Rust binary (e.g. cargo test)
    "staticlib", # Used with Swift in iOS apps
]

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = { workspace = true }
wasm-bindgen = "0.2.92"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
