[package]
name = "shared_types"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]

[build-dependencies]
anyhow = { workspace = true }
crux_core = { workspace = true, features = ["typegen"] }
shared = { path = "../shared", features = ["typegen"] }
